# pollination-manipulation

./: README.md
aruco_markers/: CMakeLists.txt  package.xml
aruco_markers/launch/: find_markers.launch
aruco_markers/msg/: Marker.msg
aruco_markers/src/: aruco_find_markers.cpp
kinova-ros/: .gitignore
kinova-ros/kinova_bringup/launch/: kinova_robot.launch
kinova-ros/kinova_control/launch/: kinova_control.launch
kinova-ros/kinova_description/urdf/: kinova_common.xacro
kinova-ros/kinova_driver/src/: kinova_arm.cpp
kinova-ros/kinova_gazebo/launch/: robot_launch.launch
manipulation/j2n6s300_moveit_config/: CMakeLists.txt
manipulation/j2n6s300_moveit_config/config/: controllers.yaml  controllers_ros_control.yaml  fake_controllers.yaml  j2n6s300.srdf  joint_limits.yaml  joint_names.yaml  kinematics.yaml  ompl_planning.yaml  sensor_realsense_pointcloud.yaml
manipulation/j2n6s300_moveit_config/launch/: bramblebee_arm.launch  bramblebee_realsense_camera.launch  j2n6s300_gazebo_demo.launch  move_group.launch  move_group_j2n6s300.launch  moveit.rviz  sensor_manager.launch.xml  trajectory_execution.launch.xml
manipulation/kinova_description/: CMakeLists.txt
manipulation/kinova_description/launch/: display_kinova_robot.launch
manipulation/kinova_description/meshes/: custom_end_effector_v2.dae  custom_end_effector_v2_2.dae
manipulation/kinova_description/rviz/: urdf.rviz
manipulation/manipulation_common/: CMakeLists.txt  package.xml
manipulation/manipulation_common/msg/: EigenDecomp.msg  Flower.msg  FlowerMap.msg  StateMachine.msg
manipulation/manipulation_common/srv/: UpdateFlowerMap.srv
manipulation/manipulation_control/: CMakeLists.txt  package.xml
manipulation/manipulation_control/action/: EEGoToPose.action
manipulation/manipulation_control/include/manipulation_control/: ee_go_to_pose_action.hpp
manipulation/manipulation_control/launch/: kinova_bringup.launch
manipulation/manipulation_control/msg/: EECameraPose.msg  StartPollination.msg
manipulation/manipulation_control/src/: ee_go_to_pose_action.cpp  ee_go_to_pose_action_node.cpp
manipulation/manipulation_description/: CMakeLists.txt  package.xml
manipulation/manipulation_mapping/: CMakeLists.txt  package.xml
manipulation/manipulation_mapping/action/: BuildMap.action
manipulation/manipulation_mapping/config/: parameters.yaml
manipulation/manipulation_mapping/include/manipulation_mapping/: flower_mapper.hpp
manipulation/manipulation_mapping/launch/: flower_mapper.launch
manipulation/manipulation_mapping/launch/launch_params/: first_search_pose.yaml
manipulation/manipulation_mapping/src/: flower_mapper.cpp  flower_mapper_node.cpp  pre_pose_mapping_ros.py  pre_pose_mapping_ros2.py  pre_pose_mapping_ros_sim.py
manipulation/manipulation_mapping_bak/: CMakeLists.txt
manipulation/manipulation_planning/: CMakeLists.txt  package.xml
manipulation/manipulation_planning/action/: PlanFlowerSequence.action
manipulation/manipulation_planning/include/manipulation_planning/: plan_flower_sequence_action.hpp
manipulation/manipulation_planning/launch/: plan_flower_sequence.launch
manipulation/manipulation_planning/src/: plan_flower_seq_action_node.cpp  plan_flower_sequence_action.cpp  test_plan_flower_sequence.cpp
manipulation/manipulation_pollinator/: CMakeLists.txt  package.xml
manipulation/manipulation_pollinator/data/: ik_lut.csv
manipulation/manipulation_pollinator/include/manipulation_pollinator/: end_effector.hpp  maestro.hpp  pollinator_control.hpp
manipulation/manipulation_pollinator/src/: end_effector.cpp  maestro.cpp  pollinator_control.cpp  pollinator_control_node.cpp
manipulation/manipulation_pollinator/srv/: PollinateFlower.srv
manipulation/manipulation_services/: CMakeLists.txt  package.xml
manipulation/manipulation_services/action/: control.action  mapping.action  planning.action
manipulation/manipulation_services/srv/: visual_servoing.srv
manipulation/manipulation_state_machine/: CMakeLists.txt  package.xml
manipulation/manipulation_state_machine/include/manipulation_state_machine/: final_previsit_pose_service.hpp  find_previsit_poses_service.hpp
manipulation/manipulation_state_machine/launch/: fake_node_services.launch  full_launch.launch
manipulation/manipulation_state_machine/src/: approach_action_server.py  fake_control_action_server.py  fake_mapping_action_server.py  fake_pollination_service.py  fake_pplanning_service.py  fake_search_for_flowers_service.py  fake_visual_servoing_service.py  final_previsit_pose_node.cpp  final_previsit_pose_service.cpp  find_previsit_poses_node.cpp  find_previsit_poses_service.cpp  planning_ga.py  planning_ga_ros.py  pre_pose_mapping.py  pre_pose_mapping_ros.py  send_pose.py  state_machine_pollinating.py  state_machine_pollinating_sim.py  test_planning.py  test_tf.py  unwind.py  unwind2_old.py  visual_servoing_action_server.py
manipulation/manipulation_state_machine/srv/: FinalPrevisitPose.srv  FindPrevisitPoses.srv
manipulation/manipulation_vision/: .gitignore  CMakeLists.txt  package.xml
manipulation/manipulation_vision/action/: ApproachFlower.action
manipulation/manipulation_vision/include/manipulation_vision/: approach_flower_action.hpp  classification.hpp  relative_frequencies.hpp  search.hpp  segmentation.hpp
manipulation/manipulation_vision/launch/: approach_flower_action_node.launch
manipulation/manipulation_vision/msg/: Segment.msg
manipulation/manipulation_vision/src/: approach_flower_action.cpp  approach_flower_action_node.cpp  classification.cpp  classification_node.cpp  classify.py  depthcallback_test.cpp  dummy_subscriber.cpp  generate_lookup.cpp  record_snapshot.cpp  search.cpp  search_node.cpp  segmentation.cpp  segmentation_node.cpp  test_approach_flower.cpp  test_pose_flower_node.cpp
manipulation/manipulation_vision/src/tf_files/: retrained_labels.txt  retrained_labels_pose.txt
manipulation/manipulation_vision/srv/: ClassifyFlowers.srv  ClassifyPose.srv  SegmentFlowers.srv  SegmentFlowersFF.srv
parameter_utils/: CMakeLists.txt  package.xml
(+12 files in other folders)
