<?xml version="1.0"?>
<package format="2">
  <name>manipulation_common</name>
  <version>0.0.0</version>
  <description>ROS Package for Common Manipulation Files</description>

  <maintainer email="irlwvu@gmail.com">WVU Interactive Robotics Laboratory</maintainer>

  <author>Jared Strader/jared.l.strader@gmail.com</author>
  <author>Jenn Nguyen/jqnguyen@mix.wvu.edu</author>

  <license>BSD</license>

  <url>https://github.com/wvu-irl/pollination-manipulation</url>
  <url>https://web.statler.wvu.edu/~irl/</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>actionlib</build_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <build_export_depend>actionlib</build_export_depend>



  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>

</package>
