<?xml version="1.0"?>
<package format="2">
  <name>manipulation_mapping</name>
  <version>0.0.0</version>
  <description>ROS Package for Manipulation Mapping</description>

  <maintainer email="irlwvu@gmail.com">WVU Interactive Robotics Laboratory</maintainer>

  <author>Jenn Nguyen/jqnguyen@mix.wvu.edu</author>
  <author>Jared Strader/jared.l.strader@gmail.com</author>

  <license>BSD</license>

  <url>https://github.com/wvu-irl/pollination-manipulation</url>
  <url>https://web.statler.wvu.edu/~irl/</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib_msgs</build_depend>
<!--   <build_depend>aruco_markers</build_depend>
 -->  <build_depend>cmake_modules</build_depend>
  <build_depend>geometric_shapes</build_depend>
  <build_depend>kinova_driver</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>manipulation_parameter_utils</build_depend>
  <build_depend>geometry_msg</build_depend>
  <build_depend>visualization_msg</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>manipulation_control</build_depend>
  <build_depend>manipulation_common</build_depend>

  <build_export_depend>actionlib_msgs</build_export_depend>
<!--   <build_export_depend>aruco_markers</build_export_depend>
 -->  <build_export_depend>cmake_modules</build_export_depend>
  <build_export_depend>geometric_shapes</build_export_depend>
  <build_export_depend>kinova_driver</build_export_depend>
  <build_export_depend>moveit_core</build_export_depend>
  <build_export_depend>moveit_ros_planning</build_export_depend>
  <build_export_depend>moveit_ros_planning_interface</build_export_depend>
  <build_export_depend>moveit_visual_tools</build_export_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>geometry_msg</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>manipulation_parameter_utils</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>manipulation_control</build_export_depend>
  <build_export_depend>manipulation_common</build_export_depend>

  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>aruco_markers</exec_depend>
  <exec_depend>cmake_modules</exec_depend>
  <exec_depend>geometric_shapes</exec_depend>
  <exec_depend>kinova_driver</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_ros_planning</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_visual_tools</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>manipulation_parameter_utils</exec_depend>
  <exec_depend>geometry_msg</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>manipulation_control</exec_depend>
  <exec_depend>manipulation_common</exec_depend>

</package>
