<?xml version="1.0"?>
<package>
  <name>manipulation_pollinator</name>
  <version>0.0.0</version>
  <description>ROS Package for the Manipulation Pollinator</description>

  <maintainer email="irlwvu@gmail.com">WVU Interactive Robotics Laboratory</maintainer>

  <author>Jared Strader/jared.l.strader@gmail.com</author>
  <author>Jenn Nguyen/jqnguyen@mix.wvu.edu</author>

  <license>BSD</license>

  <url>https://github.com/wvu-irl/pollination-manipulation</url>
  <url>https://web.statler.wvu.edu/~irl/</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>manipulation_common</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roslib</run_depend>

</package>
