<?xml version="1.0"?>
<package format="2">
  <name>manipulation_services</name>
  <version>1.0.0</version>
  <description>
    Message and service types: custom services for Brablebee workspace packages
  </description>
  <license>Apache 2.0</license>
  <author email="ca0055@mix.wvu.edu">Chris Tatsch</author>
  <maintainer email="ca0055@mix.wvu.edu">Chris Tatsch</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
