<?xml version="1.0"?>
<package format="2">
  <name>manipulation_state_machine</name>
  <version>0.0.0</version>
  <description>The manipulation_state_machine package</description>

  <maintainer email="irlwvu@gmail.com">WVU Interactive Robotics Laboratory</maintainer>

  <author>Chris Tatsch/ca0055@mix.wvu.edu</author>
  <author>Jenn Nguyen/jqnguyen@mix.wvu.edu</author>
  <author>Jared Strader/jared.l.strader@gmail.com</author>

  <license>BSD</license>

  <url>https://github.com/wvu-irl/workspace-pollination</url>
  <url>https://web.statler.wvu.edu/~irl/</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>kinova_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>manipulation_services</build_depend>
  <build_depend>manipulation_vision</build_depend>
  <build_depend>manipulation_mapping</build_depend>
  <build_depend>manipulation_control</build_depend>
  <build_depend>manipulation_common</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>manipulation_services</build_export_depend>
  <build_export_depend>manipulation_vision</build_export_depend>
  <build_export_depend>manipulation_mapping</build_export_depend>
  <build_export_depend>manipulation_control</build_export_depend>
  <build_export_depend>manipulation_common</build_export_depend>

  <exec_depend>kinova_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>message_generation</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
