<?xml version="1.0"?>
<package format="2">
  <name>manipulation_vision</name>
  <version>0.0.0</version>
  <description>ROS Package for Manipulation Vision</description>

  <maintainer email="irlwvu@gmail.com">WVU Interactive Robotics Laboratory</maintainer>

  <author>Jared Strader/jared.l.strader@gmail.com</author>
  <author>Jenn Nguyen/jqnguyen@mix.wvu.edu</author>

  <license>BSD</license>

  <url>https://github.com/wvu-irl/pollination-manipulation</url>
  <url>https://web.statler.wvu.edu/~irl/</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslib</build_depend>
  <!-- approach_flower_action dependencies -->
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>aruco_markers</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>geometric_shapes</build_depend>
  <build_depend>kinova_driver</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>manipulation_control</build_depend>
  <build_depend>manipulation_common</build_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roslib</exec_depend>
  <!-- approach_flower_action dependencies -->
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>aruco_markers</exec_depend>
  <exec_depend>cmake_modules</exec_depend>
  <exec_depend>geometric_shapes</exec_depend>
  <exec_depend>kinova_driver</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_ros_planning</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_visual_tools</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>manipulation_control</exec_depend>

</package>
